Correction RGAA - #23167 contraste

--- a/assets/css/components/_modal.scss
+++ b/assets/css/components/_modal.scss
@@ -105,10 +105,6 @@
 		&__indication {
 			margin-bottom: $spacer;
 			display: block;
-
-			span {
-				color: $red;
-			}
 		}
 
 		label {
@@ -131,10 +127,6 @@
 
 				@include media-breakpoint-up(sm) {
 					padding-bottom: 0;
-				}
-
-				span {
-					color: $red;
 				}
 			}
 
